--- a/sensor_config.json
+++ b/sensor_config.json
@@ -1,6 +1,6 @@
 {
-    "entry_sensor_address": "0x2A",
-    "exit_sensor_address": "0x2B",
+    "entry_sensor_address": 42,
+    "exit_sensor_address": 43,
     "poll_interval": 0.03,
     "event_timeout": 1.5,
     "reset_time": 0.4,
